# unity-freetype

./: README.md
FreeTypeFont/: FreeTypeFont.cs  FreeTypeFontApi.cs  FreeTypeFontAtlas.cs  FreeTypeFontUpdater.cs
Plugin/: CMakeLists.txt  make_android.sh  make_ios.sh  make_macos.sh  make_windows.bat
Plugin/Plugins/macOS/unity-freetype.bundle/Contents/: Info.plist
Plugin/Plugins/macOS/unity-freetype.bundle/Contents/MacOS/: unity-freetype
Plugin/cmake/: iOS.cmake
Plugin/src/freetype/include/freetype/config/: ftmodule.h  ftoption.h
Plugin/src/unity-freetype/: font.cpp  font.h  interface.cpp  interface.h
Shaders/: Unlit - FreeType Text 1.shader  Unlit - FreeType Text 2.shader  Unlit - FreeType Text 3.shader  Unlit - FreeType Text.cginc  Unlit - FreeType Text.shader
